Update Solvo info

--- a/index.html
+++ b/index.html
@@ -429,8 +429,10 @@
 								<ul class="stuff">
 									<li><a target="_blank" href="https://www.youtube.com/watch?v=hz5aQJYQqOc">Video <i
 												class="icon-graduation-cap"></i></a></li>
-									<li><a target="_blank" href="https://github.com/juansesanchezl/SOLVO_App">Read
-											More<i class="icon-arrow-right22"></i></a></li>
+									<li><a target="_blank" href="https://github.com/juansesanchezl/SOLVO_App">App
+											<i class="icon-android"></i></a></li>
+									<li><a target="_blank" href="https://solvotg.github.io/">Page <i
+										class="icon-arrow-right22"></i></a></li>
 								</ul>
 							</div>
 						</div>
