Add new portfolio images and update index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
 
 <head>
 	<meta charset="utf-8">
@@ -663,6 +663,86 @@
 					</div>
 					<div class="col-md-4 columnW">
 						<div class="fh5co-blog animate-box">
+							<a href="#" class="blog-bg" style="background-image: url(images/portfolio-23.jpg);"></a>
+							<div class="blog-text">
+								<span class="posted_on">Aug. 11th 2023</span>
+								<h3><a href="#">IoT</a></h3>
+								<p>In the following repository, I've crafted projects that tackle challenges using Arduino
+									and C, seamlessly connecting sensors to AWS for real-time data capture. Witness the fusion
+									of hardware, programming, and cloud technologies as data is efficiently stored in a 
+									cloud-based database.</p>
+								<ul class="stuff">
+									<li><i class="icon-heart2"></i>249</li>
+									<li><i class="icon-eye2"></i>308</li>
+									<li><a target="_blank"
+											href="https://github.com/jsanchezl12/MISO_IoT">Read
+											More<i class="icon-arrow-right22"></i></a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 columnW">
+						<div class="fh5co-blog animate-box">
+							<a href="#" class="blog-bg" style="background-image: url(images/portfolio-24.jpg);"></a>
+							<div class="blog-text">
+								<span class="posted_on">Aug. 11th 2023</span>
+								<h3><a href="#">Data Analytics</a></h3>
+								<p>In this repository, I've developed projects focused on Data Analysis, navigating through the
+									intricate ETL process. Experience the efficient extraction, transformation, and loading of
+									data, showcasing the fusion of analytical skills and data processing expertise.</p>
+								<ul class="stuff">
+									<li><i class="icon-heart2"></i>249</li>
+									<li><i class="icon-eye2"></i>308</li>
+									<li><a target="_blank"
+											href="https://github.com/jsanchezl12/Analisis_Datos_MISO">Read
+											More<i class="icon-arrow-right22"></i></a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 columnW">
+						<div class="fh5co-blog animate-box">
+							<a href="#" class="blog-bg" style="background-image: url(images/portfolio-25.jpg);"></a>
+							<div class="blog-text">
+								<span class="posted_on">Oct. 10th 2023</span>
+								<h3><a href="#">APIs</a></h3>
+								<p>In this project, I implemented a robust API using NestJS, incorporating diverse methods. 
+									Furthermore, I illustrated the practical application of a GraphQL API, seamlessly integrating 
+									technologies such as Postman and PostgreSQL. The project showcases the effective utilization
+									of these tools in crafting efficient and dynamic API solutions.</p>
+								<ul class="stuff">
+									<li><i class="icon-heart2"></i>249</li>
+									<li><i class="icon-eye2"></i>308</li>
+									<li><a target="_blank"
+											href="https://github.com/jsanchezl12/APIS_miso">Read
+											More<i class="icon-arrow-right22"></i></a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 columnW">
+						<div class="fh5co-blog animate-box">
+							<a href="#" class="blog-bg" style="background-image: url(images/portfolio-26.jpg);"></a>
+							<div class="blog-text">
+								<span class="posted_on">Oct. 10th 2023</span>
+								<h3><a href="#">Quality Metrics Software</a></h3>
+								<p>In this endeavor, I focused on Quality Metrics and Software, employing tools like SonarCloud
+									and embracing effective refactoring methods. The project highlights the meticulous examination
+									of code quality metrics, showcasing the integration of SonarCloud to assess and enhance software
+									quality. Additionally, we implemented strategic refactoring techniques to elevate the overall
+									codebase integrity.</p>
+								<ul class="stuff">
+									<li><i class="icon-heart2"></i>249</li>
+									<li><i class="icon-eye2"></i>308</li>
+									<li><a target="_blank"
+											href="https://github.com/jsanchezl12/misometricalidad">Read
+											More<i class="icon-arrow-right22"></i></a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 columnW">
+						<div class="fh5co-blog animate-box">
 							<a href="#" class="blog-bg" style="background-image: url(images/portfolio-11.jpg);"></a>
 							<div class="blog-text">
 								<span class="posted_on">May. 30th 2024</span>
@@ -785,8 +865,6 @@
 	<script src="js/jquery.stellar.min.js"></script>
 	<!-- Easy PieChart -->
 	<script src="js/jquery.easypiechart.min.js"></script>
-	<!-- Google Map -->
-	<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCefOgb1ZWqYtj7raVSmN4PL2WkTrc-KyA&sensor=false"></script>
 	<script src="js/google_map.js"></script> -->
 
 	<!-- Main -->
