Remove unnecessary code and links

--- a/index.html
+++ b/index.html
@@ -501,8 +501,6 @@
 								<p>In this project, we developed both a backend and frontend for an online betting
 									system using Angular JS and Flask.</p>
 								<ul class="stuff">
-									<li><i class="icon-heart2"></i>249</li>
-									<li><i class="icon-eye2"></i>308</li>
 									<li><a target="_blank" href="https://github.com/jsanchezl12/miso_eporra_2">Read
 											More<i class="icon-arrow-right22"></i></a></li>
 								</ul>
@@ -518,8 +516,6 @@
 								<p>In this project, we conducted two experiments in which we implemented an API, a
 									queue, an observer, and a health component using Flask.</p>
 								<ul class="stuff">
-									<li><i class="icon-heart2"></i>249</li>
-									<li><i class="icon-eye2"></i>308</li>
 									<li><a target="_blank"
 											href="https://github.com/jsanchezl12/miso_arqui_2_project">Read
 											More<i class="icon-arrow-right22"></i></a></li>
@@ -537,8 +533,6 @@
 									components focused on albums, bands, and collectors. Espresso was used for testing,
 									along with an accessibility analysis.</p>
 								<ul class="stuff">
-									<li><i class="icon-heart2"></i>249</li>
-									<li><i class="icon-eye2"></i>308</li>
 									<li><a target="_blank"
 											href="https://github.com/jsanchezl12/desarrollo_movil_miso">Read
 											More<i class="icon-arrow-right22"></i></a></li>
@@ -556,8 +550,6 @@
 									worker, mail, redis) that interconnected via containers and were deployed on GCP.
 									Google APIs such as Mail, Bucket, and Credentials were utilized.</p>
 								<ul class="stuff">
-									<li><i class="icon-heart2"></i>249</li>
-									<li><i class="icon-eye2"></i>308</li>
 									<li><a target="_blank"
 											href="https://github.com/jsanchezl12/desarrollo_cloud_miso">Read
 											More<i class="icon-arrow-right22"></i></a></li>
@@ -576,8 +568,6 @@
 									and how to apply it to emerging technologies, illustrated with a basic example of an
 									empanada order API.</p>
 								<ul class="stuff">
-									<li><i class="icon-heart2"></i>249</li>
-									<li><i class="icon-eye2"></i>308</li>
 									<li><a target="_blank"
 											href="https://github.com/jsanchezl12/flask_rest_api_example">Read
 											More<i class="icon-arrow-right22"></i></a></li>
@@ -597,8 +587,6 @@
 									in PDF and Figma, and a web and mobile prototype developed in Angular and Android.
 								</p>
 								<ul class="stuff">
-									<li><i class="icon-heart2"></i>249</li>
-									<li><i class="icon-eye2"></i>308</li>
 									<li><a target="_blank"
 											href="https://github.com/jsanchezl12/202311_UXAlarms_jsanchezl12">Read
 											More<i class="icon-arrow-right22"></i></a></li>
@@ -616,8 +604,6 @@
 									routes, mail delivery, API, users, utility) that interconnected via Kubernetes and
 									containers, and were deployed on GCP.</p>
 								<ul class="stuff">
-									<li><i class="icon-heart2"></i>249</li>
-									<li><i class="icon-eye2"></i>308</li>
 									<li><a target="_blank"
 											href="https://github.com/jsanchezl12/miso_nativeapps_cloud_project">Read
 											More<i class="icon-arrow-right22"></i></a></li>
@@ -635,8 +621,6 @@
 									basics to application using Kubernetes. Containers were utilized via Dockerfile,
 									Docker Compose, and MicroK8s.</p>
 								<ul class="stuff">
-									<li><i class="icon-heart2"></i>249</li>
-									<li><i class="icon-eye2"></i>308</li>
 									<li><a target="_blank" href="https://github.com/jsanchezl12/containers_example">Read
 											More<i class="icon-arrow-right22"></i></a></li>
 								</ul>
@@ -652,8 +636,6 @@
 								<p>In this project, we developed deliveries where we utilized various AWS services,
 									including AWS Beanstalk, AWS CodeCommit, AWS CodeDeploy, ECR, and ECS.</p>
 								<ul class="stuff">
-									<li><i class="icon-heart2"></i>249</li>
-									<li><i class="icon-eye2"></i>308</li>
 									<li><a target="_blank"
 											href="https://github.com/jsanchezl12/miso_devops_project">Read
 											More<i class="icon-arrow-right22"></i></a></li>
@@ -672,8 +654,6 @@
 									of hardware, programming, and cloud technologies as data is efficiently stored in a 
 									cloud-based database.</p>
 								<ul class="stuff">
-									<li><i class="icon-heart2"></i>249</li>
-									<li><i class="icon-eye2"></i>308</li>
 									<li><a target="_blank"
 											href="https://github.com/jsanchezl12/MISO_IoT">Read
 											More<i class="icon-arrow-right22"></i></a></li>
@@ -691,8 +671,6 @@
 									intricate ETL process. Experience the efficient extraction, transformation, and loading of
 									data, showcasing the fusion of analytical skills and data processing expertise.</p>
 								<ul class="stuff">
-									<li><i class="icon-heart2"></i>249</li>
-									<li><i class="icon-eye2"></i>308</li>
 									<li><a target="_blank"
 											href="https://github.com/jsanchezl12/Analisis_Datos_MISO">Read
 											More<i class="icon-arrow-right22"></i></a></li>
@@ -711,8 +689,6 @@
 									technologies such as Postman and PostgreSQL. The project showcases the effective utilization
 									of these tools in crafting efficient and dynamic API solutions.</p>
 								<ul class="stuff">
-									<li><i class="icon-heart2"></i>249</li>
-									<li><i class="icon-eye2"></i>308</li>
 									<li><a target="_blank"
 											href="https://github.com/jsanchezl12/APIS_miso">Read
 											More<i class="icon-arrow-right22"></i></a></li>
@@ -732,8 +708,9 @@
 									quality. Additionally, we implemented strategic refactoring techniques to elevate the overall
 									codebase integrity.</p>
 								<ul class="stuff">
-									<li><i class="icon-heart2"></i>249</li>
-									<li><i class="icon-eye2"></i>308</li>
+									<li><a target="_blank" href="https://github.com/jsanchezl12/codesmells_repo">P#1<i class=""></i></a></li>
+									<li><a target="_blank" href="https://github.com/jsanchezl12/metricas_analisispro_miso">P#2<i class=""></i></a></li>
+									<li><a target="_blank" href="https://sonarcloud.io/project/overview?id=jsanchezl12_codesmells_repo">P#3<i class=""></i></a></li>
 									<li><a target="_blank"
 											href="https://github.com/jsanchezl12/misometricalidad">Read
 											More<i class="icon-arrow-right22"></i></a></li>
